--- a/templates/menu.html
+++ b/templates/menu.html
@@ -14,7 +14,7 @@
 
   <ion-side-menu side="left">
     <ion-header-bar class="bar-positive">
-      <h1 class="title">Left</h1>
+      <h1 class="title">X</h1>
     </ion-header-bar>
     <ion-content  class="main-menu">
       <ion-list>
