--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,15 @@
 <ion-view title="Home">
     <ion-content>
-        
+                <div class="logo-center">
+            <img src="img/logos.png">
+        </div>
+        <div class="home-content">
+            <div class="home-name">
+                <h5>Laren Paul</h5>
+            </div>
+            <span class="ion-ribbon-a"></span>Rank 3
+            <span class="ion-ios-star"></span> Score:10
+        </div>
+        <div class=""></div>
     </ion-content>
 </ion-view>
