--- a/templates/login.html
+++ b/templates/login.html
@@ -18,9 +18,9 @@
         <div class="login-down">
             <div class="loginstep">
                 <p>Step 2 of 2</p>
-                <span class="ion-record"></span>
-                <span class="ion-record"></span>
-                <span class="ion-record"></span>
+                <span class="ion-record ion-record1st"></span>
+                <span class="ion-record ion-record2nd"></span>
+                <span class="ion-record ion-record3rd"></span>
                 <hr class="tab-line">
             </div>
             <div class="connectwith">
