--- a/css/style.css
+++ b/css/style.css
@@ -53,10 +53,6 @@
     width: 120px;
 }
 
-.button-stnd1 {
-    margin-right: 40px;
-}
-
 .login-down {
     text-align: center;
     background: #7ab800;
@@ -130,10 +126,6 @@ span.ion-checkmark-round.float-right {
     float: left;
     width: 50%;
 }
-.button-ticktwit {
-    float: left;  
-    width: 50%;
-}
 .centertick {
 padding-bottom: 3px;
 }
@@ -142,4 +134,91 @@ padding-top: 19%;
 }
 .loginstep .ion-record {
 color: #fff;
+}
+hr.tab-line {
+    width: 238px;
+    margin-top: -12px;
+    position: absolute;
+    z-index: -1;
+}
+span.ion-record.ion-record3rd {
+    float: right;
+}
+
+span.ion-record.ion-record1st {
+    float: left;
+}
+
+.loginstep {
+    width: 244px;
+    margin: auto;
+    position: relative;
+    z-index: 0;
+}
+.headwelcome {
+text-align: center;
+padding: 25px 0;
+}
+.welcm-share {
+    text-align: center;
+}
+
+.welcm-share span.ion-social-facebook {
+    background: #507cbe;
+    border: 1px solid #507cbe;
+    color: beige;
+    border-radius: 100%;
+    padding: 8px 14px 8px 14px;
+    font-size: 18px;
+    margin-right: 5px;
+}
+.welcm-share span.ion-social-twitter {
+    background: #63cdf1;
+    border: 1px solid #63cdf1;
+    color: beige;
+    border-radius: 100%;
+    padding: 8px 10px 8px 10px;
+    font-size: 18px;
+    margin-left: 5px;
+}
+.wel-content {
+    background: #7ab800;
+    min-height: 500px;
+}
+
+.welcm-share p {
+    padding-bottom: 20px;
+    color: #fff;
+    text-transform: uppercase;
+}
+
+.welcm-btn {
+    padding: 35px 0;
+    text-align: center;
+}
+
+.welcm-btn .button.button-small {
+    color: rgb(122, 184, 0);
+    border-radius: 5px;
+    width: 100px;
+    margin: 0 10px;
+}
+.headwelcome h5 {
+    font-weight: 600;
+}
+.land-content img {
+    width: 100%;
+}
+.button-stnd1 {
+text-align: center;
+padding: 10px 10% 25px 10%;
+}
+.headlanding h5 {
+    text-align: center;
+    font-weight: 600;
+    color: #0085c3;
+}
+
+.headlanding {
+    padding-bottom: 20px;
 }
