--- a/templates/menu.html
+++ b/templates/menu.html
@@ -18,11 +18,11 @@
     </ion-header-bar>
     <ion-content class="main-menu">
       <ion-list>
-        <ion-item nav-clear menu-close ng-click="login()" class="menumain">
+        <ion-item nav-clear menu-close href="#/app/home" class="menumain">
          <span class="ion-home tac" title="home" aria-hidden="true"></span>
          <div class="head-text">DashBoard</div> 
         </ion-item>
-        <ion-item nav-clear menu-close href="#/app/search" class="menumain">
+        <ion-item nav-clear menu-close href="#/app/profile" class="menumain">
          <span class="ion-person tac" title="home" aria-hidden="true"></span>
             <div class="head-text">Profile</div>
         </ion-item>
