--- a/templates/home.html
+++ b/templates/home.html
@@ -10,6 +10,6 @@
             <span class="ion-ribbon-a"></span>Rank 3
             <span class="ion-ios-star"></span> Score:10
         </div>
-        <div class=""></div>
+        <div class="home-profile"></div>
     </ion-content>
 </ion-view>
