--- a/templates/login1.html
+++ b/templates/login1.html
@@ -17,39 +17,33 @@
         </div>
         <div class="login-down">
             <div class="loginstep">
-                <p>Step 2 of 2</p>
+                <p>Step 1 of 2</p>
                 <span class="ion-record ion-record1st"></span>
                 <span class="ion-record ion-record2nd"></span>
                 <span class="ion-record ion-record3rd"></span>
                 <hr class="tab-line">
             </div>
-            <div class="connectwith">
-                <p>Connect With</p>
-                <div class="button-login">
-                    <div class="button-tickfb">
-                        <div class="centertick">
-                            <span class="ion-checkmark-round float-left"></span>
-                        </div>
+            <div class="signnow">
+<div class="list input">
+  <label class="item item-input">
+    <input type="text" placeholder="Username">
+  </label>
+  <label class="item item-input">
+    <input type="password" placeholder="Password">
+  </label>
+</div>
+              <div class="button-login1">
                         <div class="button-side">
-                            <button class="button button-small button-fb">
-                                <span class="ion-social-facebook"></span>Facebook
+                            <button class="button button-small button-signin">
+                               Sign In Now
                             </button>
                         </div>
                     </div>
-                    <div class="button-ticktwit">
-                        <div class="centertick">
-                            <span class="ion-checkmark-round float-left"></span>
-                        </div>
-                        <button class="button button-small button-twit">
-                            <span class="ion-social-twitter"></span>Twitter
-                        </button>
-                    </div>
-                </div>
             </div>
         </div>
-                       <div class="login-circle">
-                <span class="ion-record ion-circle2"></span>
+        <div class="login-circle">
                 <span class="ion-record ion-circle1"></span>
+                <span class="ion-record ion-circle2"></span>
         </div>
     </ion-content>
 </ion-view>
