--- a/templates/login.html
+++ b/templates/login.html
@@ -5,12 +5,12 @@
         </div>
         <div class="button-stnd">
             <div class="button-tickfb">
-                <button class="button button-small button-light">
+                <button class="button button-small button-light bgtrans">
                     Information
                 </button>
             </div>
             <div class="button-ticktwit">
-                <button class="button button-small button-light">
+                <button class="button button-small button-light bgtrans">
                     Login
                 </button>
             </div>
@@ -18,38 +18,32 @@
         <div class="login-down">
             <div class="loginstep">
                 <p>Step 2 of 2</p>
-                <span class="ion-record ion-record1st"></span>
-                <span class="ion-record ion-record2nd"></span>
-                <span class="ion-record ion-record3rd"></span>
-                <hr class="tab-line">
+                <div class="icon-login">
+                    <span class="ion-record ion-record1st"></span>
+                    <span class="ion-record ion-record2nd"></span>
+                    <span class="ion-record ion-record3rd"></span>
+                    <hr class="tab-line">
+                </div>
             </div>
             <div class="connectwith">
                 <p>Connect With</p>
                 <div class="button-login">
                     <div class="button-tickfb">
                         <div class="centertick">
-                            <span class="ion-checkmark-round float-left"></span>
+                            <i class="float-left">&nbsp;&nbsp;&nbsp;</i>
                         </div>
                         <div class="button-side">
-                            <button class="button button-small button-fb">
-                                <span class="ion-social-facebook"></span>Facebook
-                            </button>
+                             <button class="button icon-left ion-social-facebook button-fb">Facebook</button>
                         </div>
                     </div>
                     <div class="button-ticktwit">
                         <div class="centertick">
-                            <span class="ion-checkmark-round float-left"></span>
-                        </div>
-                        <button class="button button-small button-twit">
-                            <span class="ion-social-twitter"></span>Twitter
-                        </button>
+                            <i class="float-left">&nbsp;&nbsp;&nbsp;</i>
+                        </div> 
+                         <button class="button icon-left ion-social-twitter button-twit">Twitter</button>
                     </div>
                 </div>
             </div>
-        </div>
-                       <div class="login-circle">
-                <span class="ion-record ion-circle2"></span>
-                <span class="ion-record ion-circle1"></span>
         </div>
     </ion-content>
 </ion-view>
