--- a/templates/login1.html
+++ b/templates/login1.html
@@ -5,12 +5,12 @@
         </div>
         <div class="button-stnd">
             <div class="button-tickfb">
-                <button class="button button-small button-light">
+                <button class="button button-small button-light bgtrans">
                     Information
                 </button>
             </div>
             <div class="button-ticktwit">
-                <button class="button button-small button-light">
+                <button class="button button-small button-light bgtrans">
                     Login
                 </button>
             </div>
@@ -18,32 +18,30 @@
         <div class="login-down">
             <div class="loginstep">
                 <p>Step 1 of 2</p>
-                <span class="ion-record ion-record1st"></span>
-                <span class="ion-record ion-record2nd"></span>
-                <span class="ion-record ion-record3rd"></span>
-                <hr class="tab-line">
+                <div class="icon-login">
+                    <span class="ion-record ion-record1st"></span>
+                    <span class="ion-circle">&nbsp;&nbsp;</span>
+                    <span class="ion-record ion-record3rd ion-recordfade"></span>
+                    <hr class="tab-line">
+                </div>
             </div>
             <div class="signnow">
-<div class="list input">
-  <label class="item item-input">
-    <input type="text" placeholder="Username">
-  </label>
-  <label class="item item-input">
-    <input type="password" placeholder="Password">
-  </label>
-</div>
-              <div class="button-login1">
-                        <div class="button-side">
-                            <button class="button button-small button-signin">
-                               Sign In Now
-                            </button>
-                        </div>
+                <div class="list input bgtrans">
+                    <label class="item item-input bgtrans">
+                        <input type="text" placeholder="Username" class="bgtrans">
+                    </label>
+                    <label class="item item-input bgtrans">
+                        <input type="password" placeholder="Password" class="bgtrans">
+                    </label>
+                </div>
+                <div class="button-login1">
+                    <div class="button-side">
+                        <button class="button button-small button-signin">
+                            Sign In Now
+                        </button>
                     </div>
+                </div>
             </div>
-        </div>
-        <div class="login-circle">
-                <span class="ion-record ion-circle1"></span>
-                <span class="ion-record ion-circle2"></span>
         </div>
     </ion-content>
 </ion-view>
