--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,13 +1,40 @@
-<ion-view title="Profile">
-    <ion-content>
-      <div class="profile-cont">
-          <div class="profile-name">
-          <p>Lauren Paul</p>
-          </div>
-          <div class="profile-pic">
-        <img src="img/profilepic.jpg">
-          </div>
-          
-      </div>
+<ion-view class="bgprofile" title="profile">
+    <ion-content class="bg-color">
+        <div class="profile-cont">
+            <div class="profile-name">
+                <p>Lauren Paul</p>
+            </div>
+            <div class="img-profile">
+                <div class="profile-pic">
+                    <img src="img/profilepic.jpg">
+                </div>
+            </div>
+            <div class="triangle"></div>
+            <div class="triangle1"></div>
+        </div>
+        <div class="triangle2"></div>
+        <div class="profile-cont1">
+            <hr class="vertical">
+            <div class="all-profile">
+                <div class="profile-action">
+                    <p>Action one</p>
+                    <p>0</p>
+                </div>
+                <div class="profile-remain">
+                    <p>Action Remaining</p>
+                    <p>0</p>
+                </div>
+                <div class="social-fb">
+                    <i class="ion-social-facebook"></i>
+                    <p>Likes : <span class="like"> 20 </span>| Comment:<span class="comment"> 5 </span>
+                    </p>
+                </div>
+                <div class="social-twit">
+                    <i class="ion-social-twitter"></i>
+                    <p>Favourites : <span class="favourites"> 7 </span>| Retweet : <span class="Retweet"> 5 </span>
+                    </p>
+                </div>
+            </div>
+        </div>
     </ion-content>
 </ion-view>
