--- a/templates/home.html
+++ b/templates/home.html
@@ -1,15 +1,42 @@
-<ion-view title="Home">
+<ion-view class="bghome">
     <ion-content>
-                <div class="logo-center">
-            <img src="img/logos.png">
+        <div class="logo-center">
+            <img src="img/logohome.png">
         </div>
         <div class="home-content">
             <div class="home-name">
-                <h5>Laren Paul</h5>
+                <h5>Lauren Paul</h5>
             </div>
-            <span class="ion-ribbon-a"></span>Rank 3
-            <span class="ion-ios-star"></span> Score:10
+            <i class="icon-medal">&nbsp;</i>Rank 3
+            <i class="icon-star">&nbsp;</i>Score:10
         </div>
-        <div class="home-profile"></div>
+        <div class="home-profile">
+            <div class="home-leader">
+               <a href="#"> <i class="icon-trophy">&nbsp;</i>
+                   <span class="leader">Leaderboard</span></a>
+            </div>
+            <div class="home-people">
+               <a href="#"><i class="icon-people">&nbsp;</i>
+                   <span class="my-profile">My profile</span></a>
+            </div>
+        </div>
+        <hr class="home-divid">
+        <div class="home-socials">
+            <div class="home-fb">
+               <a href="#"> <i class="icon-fb"></i>
+                   <span class="home-fb1">Facebook</span></a>
+
+            </div>
+            <div class="home-twit">
+               <a href="#"> <i class="icon-twit"></i>
+                   <span class="home-twit1">Twitter</span></a>
+
+            </div>
+            <div class="home-post">
+                <a href="#"><i class="icon-post"></i>
+                <span class="home-post1">Post</span>
+                </a>
+            </div>
+        </div>
     </ion-content>
 </ion-view>
