--- a/templates/menu.html
+++ b/templates/menu.html
@@ -1,6 +1,6 @@
 <ion-side-menus enable-menu-with-back-views="false">
   <ion-side-menu-content>
-    <ion-nav-bar class="bar-positive">
+    <ion-nav-bar class="bar-positive bgtrans">
       <ion-nav-back-button>
       </ion-nav-back-button>
 
@@ -13,7 +13,7 @@
   </ion-side-menu-content>
 
   <ion-side-menu side="left">
-    <ion-header-bar class="bar-positive">
+    <ion-header-bar class="bar-positive bg-menu">
       <h1 class="title">X</h1>
     </ion-header-bar>
     <ion-content class="main-menu">
