--- a/css/style.css
+++ b/css/style.css
@@ -785,6 +785,17 @@ hr.vertical {
     background-size: 25px 25px;
     height: 26px;
 }
+.retweet {
+    background: url('../img/retweet.png') no-repeat;
+    background-size: 27px 27px;
+    height: 24px;
+}
+.hrt-icon {
+    background: url('../img/heart.png') no-repeat;
+    background-size: 18px 18px;
+    height: 18px;
+    margin-top: 4px;
+}
 
 ul.pswd-chgn,
 ul.edit-chgn {
@@ -899,6 +910,7 @@ text-align: center;
 text-align: center;
 color: #0085C3;
 padding-top: 5%;
+font-weight: 700;
 }
 .postinfo h4 {
 text-align: center;
@@ -916,8 +928,34 @@ text-align: center;
     color: #0085C3;
     text-transform: uppercase;
     font-size: 1.1em;
+    font-weight: 700;
 }
 .box-slider {
-    padding: 15% 0;
+    padding: 12% 0;
+}
+.like-comnt {
+    text-align: center;
+    background: #7ab800;
+    color: #fff;
+    font-size: 20px;
+    padding: 2px 0 5px 0px;
+    height: 33px;
+}
+.tab-items1 {
+    width: 50%;
+    float: left;
+    text-align: center;
+}
+
+.tab-items2 {
+    width: 50%;
+    float: left;
+     text-align: center;
+}
+.postinfo {
+    min-height: 120px;
 }
 /*       slider        */
+.title.title-center.header-item {
+    text-transform: uppercase;
+}
