--- a/templates/postinfo.html
+++ b/templates/postinfo.html
@@ -33,18 +33,18 @@
     Link:<a href="">http://bit.ly/myDellrewards</a></h4>
         </div>
         <div class="like-comnt">
-  <a class="tab-item">
-    <i class="icon ion-home"></i>
-    Home
+        <div class="tab-items1">
+  <a>
+    <i class="iicon hrt-icon"></i>
+    1
   </a>
-  <a class="tab-item">
-    <i class="icon ion-star"></i>
-    Favorites
+            </div>
+            <div class="tab-items2">
+  <a>
+    <i class="iicon retweet"></i>  
+    1
   </a>
-  <a class="tab-item">
-    <i class="icon ion-gear-a"></i>
-    Settings
-  </a>
+            </div>
 </div>
     </ion-content>
 </ion-view>
