--- a/templates/menu.html
+++ b/templates/menu.html
@@ -14,13 +14,13 @@
 
   <ion-side-menu side="left">
     <ion-header-bar class="bar-positive bg-menu">
-      <h1 class="title">X</h1>
+      <h1 class="title"></h1>
     </ion-header-bar>
     <ion-content class="main-menu">
       <ion-list>
         <ion-item nav-clear menu-close href="#/app/home" class="menumain">
          <span class="ion-home tac" title="home" aria-hidden="true"></span>
-         <div class="head-text">DashBoard</div> 
+         <div class="head-text">Dashboard</div> 
         </ion-item>
         <ion-item nav-clear menu-close href="#/app/profile" class="menumain">
          <span class="ion-person tac" title="home" aria-hidden="true"></span>
