--- a/templates/postinfo.html
+++ b/templates/postinfo.html
@@ -5,46 +5,45 @@
             <i class="ion-social-twitter"></i>
             <h5>date</h5> 02-02-15 | 13.55.05
         </div>
-    <div class="box-slider">
-        <ion-slide-box on-slide-changed="slideChanged(index)" show-pager="true" does-continue="true" auto-play="3000">
-            <ion-slide>
-                <div class="box">
-                    <h3>Get your voucher code as soon as your reward points on My Dell Rewards.
+        <div class="box-slider">
+            <ion-slide-box on-slide-changed="slideChanged(index)" show-pager="true" does-continue="true" auto-play="3000">
+                <ion-slide>
+                    <div class="box">
+                        <h3>Get your voucher code as soon as your reward points on My Dell Rewards.
     Link:<a href="">http://bit.ly/myDellrewards</a></h3>
-                </div>
-            </ion-slide>
-            <ion-slide>
-                <div class="box">
-                    <h3>Get your voucher code as soon as your reward points on My Dell Rewards.
+                    </div>
+                </ion-slide>
+                <ion-slide>
+                    <div class="box">
+                        <h3>Get your voucher code as soon as your reward points on My Dell Rewards.
     Link:<a href="">http://bit.ly/myDellrewards</a>
                </h3>
-                </div>
-            </ion-slide>
-            <ion-slide>
-                <div class="box">
-                    <h3>Get your voucher code as soon as your reward points on My Dell Rewards.
+                    </div>
+                </ion-slide>
+                <ion-slide>
+                    <div class="box">
+                        <h3>Get your voucher code as soon as your reward points on My Dell Rewards.
     Link:<a href="">http://bit.ly/myDellrewards</a></h3>
-                </div>
-            </ion-slide>
-        </ion-slide-box>
-       </div>
+                    </div>
+                </ion-slide>
+            </ion-slide-box>
+        </div>
         <div class="postinfo">
-       <h4>Get your voucher code as soon as your reward points on My Dell Rewards.
+            <h4>Get your voucher code as soon as your reward points on My Dell Rewards.
     Link:<a href="">http://bit.ly/myDellrewards</a></h4>
         </div>
         <div class="like-comnt">
-        <div class="tab-items1">
-  <a>
-    <i class="iicon hrt-icon"></i>
-    1
-  </a>
+            <div class="tab-items1">
+                <a>
+                    <i class="iicon hrt-icon"></i>
+                    1
+                </a>
             </div>
             <div class="tab-items2">
-  <a>
-    <i class="iicon retweet"></i>  
-    1
-  </a>
+                <a>
+                    <i class="iicon retweet"></i> 1
+                </a>
             </div>
-</div>
+        </div>
     </ion-content>
 </ion-view>
