--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,4 @@
-<ion-view class="bghome">
+<ion-view class="bghome bgtrans">
     <ion-content>
         <div class="logo-center">
             <img src="img/logohome.png">
@@ -7,34 +7,35 @@
             <div class="home-name">
                 <h5>Lauren Paul</h5>
             </div>
-            <i class="icon-medal">&nbsp;</i>Rank 3
-            <i class="icon-star">&nbsp;</i>Score:10
+            <i class="icon icon-medal">&nbsp;</i>Rank 3
+            <i class="icon icon-star">&nbsp;</i>Score:10
+            <hr class="dividhome">
         </div>
         <div class="home-profile">
             <div class="home-leader">
-               <a href="#"> <i class="icon-trophy">&nbsp;</i>
+               <a href="#"> <i class="icon icon-trophy">&nbsp;</i>
                    <span class="leader">Leaderboard</span></a>
             </div>
             <div class="home-people">
-               <a href="#"><i class="icon-people">&nbsp;</i>
+               <a href="#"><i class="icon icon-people">&nbsp;</i>
                    <span class="my-profile">My profile</span></a>
             </div>
         </div>
         <hr class="home-divid">
         <div class="home-socials">
             <div class="home-fb">
-               <a href="#"> <i class="icon-fb"></i>
+               <a href="#"> <i class="icon icon-fb"></i>
                    <span class="home-fb1">Facebook</span></a>
 
             </div>
             <div class="home-twit">
-               <a href="#"> <i class="icon-twit"></i>
+               <a href="#"> <i class="icon icon-twit"></i>
                    <span class="home-twit1">Twitter</span></a>
 
             </div>
             <div class="home-post">
                 <a href="#"><i class="icon-post"></i>
-                <span class="home-post1">Post</span>
+                <span class="home-post1"> Create Post</span>
                 </a>
             </div>
         </div>
