--- a/templates/landing.html
+++ b/templates/landing.html
@@ -1,5 +1,5 @@
 <ion-view>
-    <ion-content class="bckgrnd">
+    <ion-content>
         <div class="logo-center">
             <img src="img/logos.png">
         </div>
