--- a/templates/login1.html
+++ b/templates/login1.html
@@ -35,7 +35,7 @@
                     </label>
                 </div>
                 <div class="button-login1">
-                    <div class="button-side">
+                    <div class="button-sidelog">
                         <button class="button button-small button-signin">
                             Sign In Now
                         </button>
