--- a/templates/suggestpost.html
+++ b/templates/suggestpost.html
@@ -9,7 +9,7 @@
             <label class="item item-input img">
                 <input type="text" placeholder="text">
             </label>
-            <label class="item item-input ">
+            <label class="item item-input image-sugest">
                 image
                 <button class="button button-small imgset">
                     Choose File
