--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@
     font-weight: 700;
 }
 
-body {
+body,h1,h2,h3,h4,h5,h6 {
     font-family: Museo;
 }
 
@@ -54,7 +54,9 @@ button {
     background: url('../img/background.png') no-repeat;
     background-size: 100% 100%;
 }
-
+.bg-white {
+    background: rgba(255, 255, 255, 0.8);
+}
 .logo-center {
     text-align: center;
     padding: 20px 0px 20px 0;
@@ -82,7 +84,7 @@ button {
 
 .login-down {
     text-align: center;
-    background: rgba(122, 184, 0, 0.7);
+    background: rgba(122, 184, 0, 0.9);
     margin: 20px 20px 20px 20px;
     border-radius: 20px;
     padding: 25px 0 28px 0px;
@@ -206,8 +208,8 @@ span.ion-record.ion-record1st {
     border: 1px solid #507cbe;
     color: beige;
     border-radius: 100%;
-    padding: 8px 14px 8px 14px;
-    font-size: 18px;
+    padding: 6px 14px 6px 14px;
+    font-size: 20px;
     margin-right: 5px;
 }
 
@@ -216,13 +218,13 @@ span.ion-record.ion-record1st {
     border: 1px solid #63cdf1;
     color: beige;
     border-radius: 100%;
-    padding: 8px 10px 8px 10px;
+    padding: 6px 10px 6px 10px;
     font-size: 18px;
     margin-left: 5px;
 }
 
 .wel-content {
-    background: #7ab800;
+    background: rgba(122, 184, 0, 0.9);
     min-height: 500px;
 }
 
@@ -230,6 +232,7 @@ span.ion-record.ion-record1st {
     padding-bottom: 20px;
     color: #fff;
     text-transform: uppercase;
+    font-size: 11px;
 }
 
 .welcm-btn {
@@ -242,10 +245,14 @@ span.ion-record.ion-record1st {
     border-radius: 5px;
     width: 100px;
     margin: 0 10px;
+    padding: 5px 0 5px 0;
+    text-transform: uppercase;
 }
 
 .headwelcome h5 {
-    font-weight: 600;
+    color: #fff;
+    font-size: 15px;
+    font-weight:300;
 }
 
 .land-content img {
@@ -259,7 +266,7 @@ span.ion-record.ion-record1st {
 
 .headlanding h5 {
     text-align: center;
-    font-weight: 600;
+    font-weight: 500;
     color: #0085c3;
 }
 
@@ -348,6 +355,7 @@ span.ion-record.ion-circle2 {
 
 .bgtrans {
     background: transparent;
+    border: 0px;
 }
 
 input.bgtrans::-webkit-input-placeholder {
@@ -398,6 +406,8 @@ span.ion-circle {
     line-height: 21px;
     cursor: pointer;
     padding: 2px 13px;
+    border-color: #fff;
+    font-weight: 700;
 }
 
 .button.icon:before,
@@ -437,8 +447,9 @@ button.button.icon-left.button-twit {
 .home-name h5 {
     color: #fff;
     letter-spacing: 1px;
-    font-weight: 700;
-    font-size: 16px;
+    font-weight: 500;
+    font-size: 18px;
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
 }
 
 .home-profile {
@@ -533,20 +544,14 @@ button.button.icon-left.button-twit {
 }
 
 hr.home-divid {
-    width: 60%;
+    width: 70%;
+    background: rgba(255, 255, 255, 0.5);
+    height: 1px;
+    border: 0;
 }
 
 a {
     text-decoration: none;
-}
-
-ion-header-bar.bar-positive.bg-menu.bar.bar-header.disable-user-behavior {
-    background: #274679;
-}
-
-ion-header-bar.bar-positive.bgtrans.bar.bar-header.disable-user-behavior {
-    background: rgba(161, 205, 76, 0.7);
-    border: 0px;
 }
 
 .bar-positive .button.button-icon {
@@ -559,14 +564,11 @@ ion-header-bar.bar-positive.bgtrans.bar.bar-header.disable-user-behavior {
 .buttons.buttons-left.header-item {
     border: 2px solid #fff;
     border-radius: 100%;
-    height: 34px;
-    width: 34px;
-    margin: 15px 0px 0px 20px;
+    height: 35px;
+    width: 36px;
 }
 
-.has-header {
-    /* top: 30px; */
-}
+
 
 ion-view.bgprofile.pane {
     background: url('../img/bgprofile.png') no-repeat;
@@ -785,11 +787,13 @@ hr.vertical {
     background-size: 25px 25px;
     height: 26px;
 }
+
 .retweet {
     background: url('../img/retweet.png') no-repeat;
     background-size: 27px 27px;
     height: 24px;
 }
+
 .hrt-icon {
     background: url('../img/heart.png') no-repeat;
     background-size: 18px 18px;
@@ -903,18 +907,31 @@ ul.edit-dropdown li ul li label input::-webkit-input-placeholder {
     position: relative;
 }
 /*       slider        */
+
 .box h3 {
-text-align: center;
+    text-align: center;
+    color: #91ddf8;
 }
+
+.box h3 a {
+    text-align: center;
+}
+
 .post-infocont {
-text-align: center;
-color: #0085C3;
-padding-top: 5%;
-font-weight: 700;
+    text-align: center;
+    color: #0085C3;
+    padding-top: 5%;
+    font-weight: 700;
 }
+
 .postinfo h4 {
-text-align: center;
+    text-align: center;
+    color: #91ddf8;
 }
+.postinfo h4 a {
+    color: #91ddf8;
+}
+
 
 .post-infocont i {
     color: #fff;
@@ -930,9 +947,11 @@ text-align: center;
     font-size: 1.1em;
     font-weight: 700;
 }
+
 .box-slider {
     padding: 12% 0;
 }
+
 .like-comnt {
     text-align: center;
     background: #7ab800;
@@ -941,6 +960,7 @@ text-align: center;
     padding: 2px 0 5px 0px;
     height: 33px;
 }
+
 .tab-items1 {
     width: 50%;
     float: left;
@@ -950,12 +970,61 @@ text-align: center;
 .tab-items2 {
     width: 50%;
     float: left;
-     text-align: center;
+    text-align: center;
 }
+
 .postinfo {
     min-height: 120px;
 }
 /*       slider        */
+
 .title.title-center.header-item {
     text-transform: uppercase;
+}
+
+label.item.item-input.fb-twt {
+    color: #2e8cd6;
+}
+
+label.item.item-input.fb-twt i {
+    font-size: 20px;
+    padding-right: 20px;
+}
+
+label.item.item-input.image-sugest button {
+    color: #2E8CD6;
+    background: #fff;
+    border: 1px solid #2E8CD6;
+}
+
+.suggest {
+    text-align: center;
+}
+
+.menu {
+    width: 135px!important;
+}
+
+.head-text {
+    text-transform: uppercase;
+    font-size: 14px;
+}
+
+h1.title i {
+    font-size: 2.7em;
+}
+
+button.button.menu-btncolor {
+    color: #fff;
+    padding-left: 3px!important;
+    margin-top: -1px;
+}
+hr.dividhome {
+    width: 90%;
+    border: 0;
+    background: rgba(255, 255, 255, 0.5);
+    height: 1px;
+}
+.button-sidelog .button {
+padding: 2px 0;
 }
