--- a/templates/menu.html
+++ b/templates/menu.html
@@ -1,11 +1,11 @@
 <ion-side-menus enable-menu-with-back-views="false">
   <ion-side-menu-content>
-    <ion-nav-bar class="bar-positive bgtrans">
+    <ion-nav-bar class="bgtrans">
       <ion-nav-back-button>
       </ion-nav-back-button>
 
       <ion-nav-buttons side="left">
-        <button class="button button-icon button-clear ion-navicon" menu-toggle="left">
+        <button class="button button-icon button-clear ion-navicon menu-btncolor" menu-toggle="left">
         </button>
       </ion-nav-buttons>
     </ion-nav-bar>
@@ -14,7 +14,7 @@
 
   <ion-side-menu side="left">
     <ion-header-bar class="bar-positive bg-menu">
-      <h1 class="title"></h1>
+      <h1 class="title"><i class="icon ion-ios7-close-empty"></i></h1>
     </ion-header-bar>
     <ion-content class="main-menu">
       <ion-list>
