--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -1,6 +1,6 @@
 <ion-view>
     <ion-content class="bckgrnd">
-        <div class="logo-center">
+        <div class="logo-center bg-white">
             <img src="img/logos.png">
         </div>
         <div class="wel-content">
