--- a/templates/menu.html
+++ b/templates/menu.html
@@ -12,9 +12,9 @@
     <ion-nav-view name="menuContent"></ion-nav-view>
   </ion-side-menu-content>
 
-  <ion-side-menu side="left">
+  <ion-side-menu side="left" width="135">
     <ion-header-bar class="bar-positive bg-menu">
-      <h1 class="title"><i class="icon ion-ios7-close-empty"></i></h1>
+      <h1 menu-close class="title"><i class="icon ion-ios7-close-empty"></i></h1>
     </ion-header-bar>
     <ion-content class="main-menu">
       <ion-list>
