--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,5 @@
 <ion-view class="bghome bgtrans">
-    <ion-content>
+    <ion-content class="no-header">
         <div class="logo-center">
             <img src="img/logohome.png">
         </div>
