--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,6 +1,9 @@
-<ion-view class="bgprofile" title="profile">
-    <ion-content class="bg-color">
-        <div class="profile-cont">
+<ion-view class="bgprofile title-main">
+    <ion-content class="no-header">
+       <div class="profile-cont">
+       <div class="titlemain">
+           Profile
+       </div>
             <div class="profile-name">
                 <p>Lauren Paul</p>
             </div>
@@ -14,7 +17,7 @@
         </div>
         <div class="triangle2"></div>
         <div class="profile-cont1">
-            <hr class="vertical">
+<!--            <hr class="vertical">-->
             <div class="all-profile">
                 <div class="profile-action">
                     <p>Action one</p>
