--- a/css/style.css
+++ b/css/style.css
@@ -541,6 +541,7 @@ button.button.icon-left.button-twit {
     color: #fff;
     text-transform: uppercase;
     padding-top: 8px;
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
 }
 
 hr.home-divid {
@@ -1027,4 +1028,9 @@ hr.dividhome {
 }
 .button-sidelog .button {
 padding: 2px 0;
+}
+.titlemain {
+font-size: 18px;
+text-transform: uppercase;
+color: #fff;
 }
