--- a/templates/editprofile.html
+++ b/templates/editprofile.html
@@ -1,5 +1,5 @@
 <ion-view>
-    <ion-content class="">
+    <ion-content>
         <div class="edit-header">
             <button class="button button-icon icon ion-close-round"></button>
             <button class="button button-icon icon ion-checkmark"></button>
