--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,15 +1,9 @@
-<<<<<<< Updated upstream
 <ion-view class="bgprofile title-main">
     <ion-content class="no-header">
        <div class="profile-cont">
        <div class="titlemain">
            Profile
        </div>
-=======
-<ion-view class="bgprofile" title="profile">
-    <ion-content class="bg-color no-header">
-        <div class="profile-cont">
->>>>>>> Stashed changes
             <div class="profile-name">
                 <p>Lauren Paul</p>
             </div>
@@ -23,10 +17,11 @@
         </div>
         <div class="triangle2"></div>
         <div class="profile-cont1">
-<!--            <hr class="vertical">-->
+
             <div class="all-profile">
+               <div class="vertical-line"></div>
                 <div class="profile-action">
-                    <p>Action one</p>
+                    <p>Action Done</p>
                     <p>0</p>
                 </div>
                 <div class="profile-remain">
