--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,15 +1,31 @@
 <ion-view class="bgprofile title-main">
     <ion-content class="no-header">
-       <div class="profile-cont">
-       <div class="titlemain">
-           Profile
-       </div>
+        <div class="profile-cont">
+            <div class="titlemain">
+                Profile
+            </div>
+            <hr class="vertical-title">
             <div class="profile-name">
                 <p>Lauren Paul</p>
             </div>
             <div class="img-profile">
                 <div class="profile-pic">
                     <img src="img/profilepic.jpg">
+                </div>
+            </div>
+            <div class="profile-contmain">
+                <div class="rank-score">
+                    <span class="ranks">Rank <span class="score"> 1 </span>
+                    <span class="scores"> Score : <span class="score">105</span>
+                </div>
+                <div class="email-gen">
+                    <span class="email-prf">lauren.paul@gmail.com | 
+                    </span> <span class="gend"> female</span>
+                </div>
+                <div class="dob-std">
+                    <span class="dob-prf">dob:</span>
+                    <span class="dob-title">28/04/1987 |</span>
+                    <span class="std"> Studied at IBSR, Mumbai</span>
                 </div>
             </div>
             <div class="triangle"></div>
@@ -19,23 +35,26 @@
         <div class="profile-cont1">
 
             <div class="all-profile">
-               <div class="vertical-line"></div>
+                <div class="vertical-line"></div>
                 <div class="profile-action">
                     <p>Action Done</p>
-                    <p>0</p>
+                    <p class="score">0</p>
                 </div>
+                <div class="vertical-line"></div>
                 <div class="profile-remain">
                     <p>Action Remaining</p>
-                    <p>0</p>
+                    <p class="score">0</p>
                 </div>
+                <div class="vertical-line"></div>
                 <div class="social-fb">
-                    <i class="ion-social-facebook"></i>
-                    <p>Likes : <span class="like"> 20 </span>| Comment:<span class="comment"> 5 </span>
+                    <i class="iicon ion-fb"></i>
+                    <p>Likes : <span class="like score"> 20 </span>| Comment:<span class="comment score"> 5 </span>
                     </p>
                 </div>
+                <div class="vertical-line"></div>
                 <div class="social-twit">
-                    <i class="ion-social-twitter"></i>
-                    <p>Favourites : <span class="favourites"> 7 </span>| Retweet : <span class="Retweet"> 5 </span>
+                    <i class="iicon ion-twit"></i>
+                    <p>Favourites : <span class="favourites score"> 7 </span>| Retweet : <span class="Retweet score"> 5 </span>
                     </p>
                 </div>
             </div>
